[package]
name = "grrs"
version = "0.1.0"
authors = ["Kevin Wang <kwangsan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
structopt = "0.3"
failure = "0.1.5"
exitfailure = "0.5.1"
indicatif = "0.14.0"

[dependencies.crossbeam-channel]
version = "0.4.2"

[dependencies.ctrlc]
version = "3.1.4"

[dependencies.log]
version = "0.4.8"

[dependencies.env_logger]
version = "0.7.1"

[dependencies.signal-hook]
version = "0.1.15"
