[package]
name = "grrs"
version = "0.1.0"
authors = ["Kevin Wang <kwangsan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
atty = "0.2.14"
crossbeam-channel = "0.4.2"
ctrlc = "3.1.4"
env_logger = "0.7.1"
exitcode = "1.1.2"
exitfailure = "0.5.1"
failure = "0.1.5"
human-panic = "1.0.3"
indicatif = "0.14.0"
log = "0.4.8"
serde_json = "1.0.53"
signal-hook = "0.1.15"
structopt = "0.3"
